[project]
name = "slack-cloudinary-bridge-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "evan@ivc.media" }
]
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.0",
    "fastmcp==2.2.0",
    "requests>=2.32.3",
]

[project.scripts]
slack-cloudinary-bridge-package = "slack_cloudinary_bridge_package:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
